--- a/.github/workflows/testandbuild.yml
+++ b/.github/workflows/testandbuild.yml
@@ -22,11 +22,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r ../../src/requirements.txt
+          pip install -r src/requirements.txt
 
       - name: Run tests
         run: |
-          pytest ../../src/test.py
+          pytest /src/test.py
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
