--- a/.github/workflows/testandbuild.yml
+++ b/.github/workflows/testandbuild.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest /src/test.py
+          pytest src/test.py
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
