--- a/.github/workflows/testandbuild.yml
+++ b/.github/workflows/testandbuild.yml
@@ -44,4 +44,4 @@ jobs:
 
       - name: Test the built image
         run: |
-          docker run --rm ghcr.io/${{ github.repository_owner }}/actioneserako-proiektua:latest
+          docker run --rm ghcr.io/unaimateos/actioneserako-proiektua:latest
